--- a/app/src/main/res/layout/activity_crear_peliculas.xml
+++ b/app/src/main/res/layout/activity_crear_peliculas.xml
@@ -92,7 +92,6 @@
         android:layout_marginTop="4dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="30dp"
-
         app:layout_constraintBottom_toTopOf="@+id/btnCrear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,13 +137,12 @@
                 android:textColor="#FDFDFD"
                 android:textSize="13sp" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/edtDirector"
                 android:layout_width="356dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:ems="10"
                 android:hint="Buscar Director..."
                 android:inputType="text"
                 android:textColorHint="#A2A2A2"
@@ -160,21 +158,13 @@
                 android:textColor="#FDFDFD"
                 android:textSize="13sp" />
 
-            <EditText
+            <Spinner
                 android:id="@+id/edtGenero"
                 android:layout_width="356dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:ems="10"
-                android:textColorHint="#A2A2A2"
-                android:textSize="13sp"
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:clickable="true"
-                android:longClickable="false"
-                android:hint="Selecciona un género"
-                android:inputType="none"/>
+                android:spinnerMode="dropdown" />
 
             <TextView
                 android:id="@+id/txt_Tipo"
@@ -186,13 +176,12 @@
                 android:textColor="#FDFDFD"
                 android:textSize="13sp" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/edtTipo"
                 android:layout_width="356dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:ems="10"
                 android:hint="Buscar Tipo..."
                 android:inputType="text"
                 android:textColorHint="#A2A2A2"
@@ -208,13 +197,12 @@
                 android:textColor="#FDFDFD"
                 android:textSize="13sp" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/edtClasificacion"
                 android:layout_width="356dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:ems="10"
                 android:hint="Buscar Clasificación..."
                 android:inputType="text"
                 android:textColorHint="#A2A2A2"
@@ -258,6 +246,16 @@
                         android:textSize="10sp" />
                 </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/actorsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp" />
+
         </LinearLayout>
     </ScrollView>
 
