--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Campo de Usuario -->
-    <EditText
+    git <EditText
         android:id="@+id/edtusuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -67,6 +67,7 @@
         android:layout_marginEnd="32dp"
         android:padding="14dp"
         android:text="Iniciar Sesión"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
         app:backgroundTint="@color/kinora_purple_accent"
@@ -86,40 +87,46 @@
         android:padding="8dp"
         android:text="¿Olvidaste tu contraseña?"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/btniniciar"
         app:layout_constraintTop_toBottomOf="@+id/btniniciar" />
 
     <!-- Grupo de Crear Cuenta -->
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/btncrear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:orientation="horizontal"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="83dp"
+        android:layout_marginBottom="51dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Crear Cuenta"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/btnrecuperar" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="¿No tienes Usuario?"
-            android:textColor="@color/kinora_text_hint"
-            android:textSize="16dp" />
-
-        <TextView
-            android:id="@+id/btncrear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="Crear Cuenta"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="51dp"
+        android:text="¿No tienes Usuario?"
+        android:textColor="@color/kinora_text_hint"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btncrear"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnrecuperar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
