--- a/app/src/main/res/layout/nav_bar_cliente.xml
+++ b/app/src/main/res/layout/nav_bar_cliente.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav_bar">
+    tools:context=".nav_bar_cliente">
 
 
     <View
